<resources>
    <string name="app_name">MobileExchange</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mobile Exchange</string>
    <string name="nav_header_subtitle">Mobile Exchange</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_flashlight">Flashlight</string>
    <string name="menu_exchange_rates">Exchange Rates</string>
    <string name="usd">USD:</string>
    <string name="gbp">GBP:</string>
    <string name="eur">EUR:</string>
    <string name="cad">CAD:</string>
    <string name="chf">CHF:\n</string>
    <string name="cny">CNY:</string>
    <string name="jpy">JPY:</string>
    <string name="error" />
    <string name="baseCurrency" />
    <string name="rub">RUB:</string>
    <string name="menu_exchange_calculator">Exchange Calculator\n</string>

    <string-array name="currencies">
        <item>USD</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>JPY</item>
        <item>BRL</item>
        <item>INR</item>
    </string-array>

    <string-array name="currencies2">
        <item>USD</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>JPY</item>
        <item>BRL</item>
        <item>INR</item>
    </string-array>

    <string name="result_text">Result: %.2f %s</string>
    <string name="menu_coordinates">Your Coordinates\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_maps">Maps</string>
    <string name="google_maps_api_key">AIzaSyA-EPMJRWJI85dxGgeHi8kxahQm0TUEMKQ</string>
    <string name="info">Rates against $</string>
    <string name="brl">BRL:</string>
    <string name="inr">INR:\n</string>
    <string name="bill_recognition">Bill recognition</string>
</resources>

