<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mobileexchange.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mobileexchange.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mobileexchange.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_flashlight"
        android:name="com.example.mobileexchange.ui.flashlight.FlashlightFragment"
        android:label="@string/menu_flashlight"
        tools:layout="@layout/fragment_flashlight">
    </fragment>

    <fragment
        android:id="@+id/nav_exchange_rates"
        android:name="com.example.mobileexchange.ui.exchange_rate.ExchangeRateFragment"
        android:label="@string/menu_exchange_rates"
        tools:layout="@layout/fragment_currency_rates">
    </fragment>
</navigation>