<!-- fragment_currency_rates.xml -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lastUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Last Updated:"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastUpdated" />

    <TextView
        android:id="@+id/gbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gbp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usd" />

    <TextView
        android:id="@+id/eur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gbp" />

    <TextView
        android:id="@+id/cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cad"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eur" />

    <TextView
        android:id="@+id/chf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chf"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cad" />

    <TextView
        android:id="@+id/cny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cny"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chf" />

    <TextView
        android:id="@+id/jpy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jpy"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cny" />

    <TextView
        android:id="@+id/rub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rub"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jpy" />

    <TextView
        android:id="@+id/baseCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baseCurrency"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rub" />

</androidx.constraintlayout.widget.ConstraintLayout>
